# groebner

./: .gitignore  Cargo.toml  LICENSE  README.md  SUITE.md  TODO.md  clippy.toml
.github/workflows/: publish.yml  rust.yml
examples/: basic.rs
src/: field.rs  grebauer_moller.rs  groebner.rs  lib.rs  monomial.rs  polynomial.rs  sugar.rs
tests/: test_gm.rs  test_groebner.rs  test_stress.rs  test_sugar.rs
