[package]
name = "groebner"
version = "0.1.1"
edition = "2021"
authors = ["Stephen Diehl"]
description = "A Rust library implementing Groebner basis algorithms"
readme = "README.md"
repository = "https://github.com/sdiehl/groebner"
homepage = "https://github.com/sdiehl/groebner"
documentation = "https://docs.rs/groebner"
license = "MIT"
keywords = ["mathematics", "algebra", "polynomial", "groebner", "basis"]
categories = ["science", "mathematics"]
rust-version = "1.70.0"
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**/*",
    "benches/**/*",
    "README.md",
    "LICENSE",
    "Cargo.toml",
]
exclude = [
    ".github/**/*",
]

[lib]
name = "groebner"
path = "src/lib.rs"

[dependencies]
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

[[example]]
name = "basic"
path = "examples/basic.rs"

[lints.clippy]
# pedantic = "warn"
unwrap_used = "deny"
panic = "deny"
needless_bool = "deny"
# expect_used = "warn"
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
